﻿============================== Next release ==============================
  
  new data (thanks to Chengyuan Yao, Tianjin University, China!)
    main/Lu2O3/Yao.yml
  new data (thanks to Paul Schmitt, University of Jena, Germany, for submitting data in YAML format!)
    main/Ir/Schmitt-ALS.yml
    main/Ir/Schmitt-ALS.yml
  new data (thanks to Georgy Ermolaev, Moscow Institute of Physics and Technology, Russia, for submitting data in YAML format!)
    main/SnS2/Ermolaev.yml
    main/SnSe2/Ermolaev.yml
    main/PtS2/Ermolaev.yml
    main/PtSe2/Ermolaev.yml
  new data (thanks to Chengchao Wang, Harbin Institute of Technology, China, for submitting data in YAML format!)
    organic/C3H8O - propanol/Wang-20C.yml
    organic/C3H8O - propanol/Wang-50C.yml
    organic/C3H8O - propanol/Wang-70C.yml
    organic/C4H10O - butanol/Wang-20C.yml
    organic/C4H10O - butanol/Wang-60C.yml
    organic/C4H10O - butanol/Wang-90C.yml
    other/fuel/biodisel/Wang-20C.yml
    other/fuel/biodisel/Wang-40C.yml
    other/fuel/biodisel/Wang-60C.yml
  new data (thanks to Huygen Jöbsis, Utrecht University, Netherlands, for submitting data!!)
    other/perovskite/Cs2AgBiBr6/Jobsis.yml
  updated data (thanks to  Gintaras Tamošauskas, Vilnus University, Lithuania, for providing absorption data!)
    main/BaB2O4/Tamosauskas-o.yml - extinction coefficient added
    main/BaB2O4/Tamosauskas-o.yml - extinction coefficient added
  new data (thanks to Birgit Zatschler, University of Toronto, Canada, for submitting data in YAML format via GitHub!)
    other/commercial plastics/Kapton/Cunningham.yml
    other/commercial plastics/Kapton/Sahin.yml
    other/commercial plastics/Kapton/Kumar.yml
    other/commercial plastics/Kapton/French.yml
    other/commercial plastics/Kapton/Kawka.yml
    other/commercial plastics/Kapton/Philipp.yml
    other/commercial plastics/Kapton/Brannon.yml
    other/commercial plastics/Kapton/Arakawa.yml