@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "A. Börzsönyi, Z. Heiner, M. P. Kalashnikov, A. P. Kovács, and K. Osvay, Dispersion measurement of inert gases and gas mixtures at 800 nm, <a href=\"https://doi.org/10.1364/AO.47.004856\"><i>Appl. Opt.</i> <b>47</b>, 4856-4863 (2008)</a>"
-COMMENTS: "Standard conditions. 0 °C, 760 torr (101.325 kPa).<br>Dispersion formula may be usable down to ~0.2 µm.<br>There is a typo in one of the coefficients of the dispersion formula given in the paper: 12.75e-6 should be 12.75e-3."
+COMMENTS: "273 K (0 °C), 1000 mbar.<br>Dispersion formula may be usable down to ~0.2 µm.<br>There is a typo in one of the coefficients of the dispersion formula given in the paper: 12.75e-6 should be 12.75e-3."
 DATA:
   - type: formula 2
     wavelength_range: 0.4 1.0
@@ -11,5 +11,5 @@ DATA:
 SPECS:
     n_absolute: true
     wavelength_vacuum: true
-    temperature: 0 °C
-    pressure: 101325 Pa
+    temperature: 273 K
+    pressure: 100000 Pa
